package.json update for deployment

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://delly0.github.io/adele-finney-portfolio",
+  "homepage": "https://delly0.github.io/af-portfolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
